--- a/web/style.css
+++ b/web/style.css
@@ -1,3 +1,48 @@
 .titulo{
-    font-size: 50;
+    height: auto;
+    justify-content: center;
+    display: flex;
+    margin: 0;
+    animation: pulse 1.5s infinite;
 }
+
+@keyframes pulse {
+    0% {
+        transform: scale(.98);
+        box-shadow: 0 0 0 0 rgba(256, 256, 256, .1);
+    }
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 25px rgba(256, 256, 256, 0);
+    }
+    100% {
+        transform: scale(.98);
+        box-shadow: 0 0 0 0 rgba(256, 256, 256, 0);
+    }
+}
+
+@media screen and (max-width:1920px){
+    .titulo{
+        font-size: 70px;
+    }  
+  }
+@media screen and (max-width:800px){
+    .titulo{
+      font-size: 50px;
+    }  
+  }
+  @media screen and (max-width:600px){
+    .titulo{
+      font-size: 40px;
+    }  
+  }
+  @media screen and (max-width:400px){
+    .titulo{
+      font-size: 30px;
+    }  
+  }
+  @media screen and (max-width:311px){
+    .titulo{
+      font-size: 20px;
+    }  
+  }
