--- a/web/style.css
+++ b/web/style.css
@@ -1,9 +1,35 @@
+*{
+  background-color: beige;
+}
+
 .titulo{
     height: auto;
     justify-content: center;
     display: flex;
     margin: 0;
     animation: pulse 1.5s infinite;
+    transition: font-size 0.5s;
+}
+
+:root {
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input{
+  height: 30px;
+  width: 100%;
+  background-color: rgb(101, 95, 95);
+  color: white;
+  border: 0px;
+  border-radius: 10px;
+  outline: 0px;
+  padding-left: 10px;
+  text-align: center;
+  font-size: 20px;
 }
 
 @keyframes pulse {
@@ -22,27 +48,27 @@
 }
 
 @media screen and (max-width:1920px){
-    .titulo{
-        font-size: 70px;
-    }  
-  }
+  .titulo{
+      font-size: 70px;
+  }  
+}
 @media screen and (max-width:800px){
-    .titulo{
-      font-size: 50px;
-    }  
-  }
-  @media screen and (max-width:600px){
-    .titulo{
-      font-size: 40px;
-    }  
-  }
-  @media screen and (max-width:400px){
-    .titulo{
-      font-size: 30px;
-    }  
-  }
-  @media screen and (max-width:311px){
-    .titulo{
-      font-size: 20px;
-    }  
-  }
+  .titulo{
+    font-size: 50px;
+  }  
+}
+@media screen and (max-width:600px){
+  .titulo{
+    font-size: 40px;
+  }  
+}
+@media screen and (max-width:400px){
+  .titulo{
+    font-size: 30px;
+  }  
+}
+@media screen and (max-width:311px){
+  .titulo{
+    font-size: 20px;
+  }  
+}
