--- a/web/style.css
+++ b/web/style.css
@@ -13,10 +13,26 @@
 
 :root {
   width: 100vw;
-  height: 80vh;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.fondo{
+  background-color: rgb(71, 70, 70);
+  margin-top: 20px;
+  width: 100%;
+  height: 100px;
+  border-radius: 10px;
+  color: white;
+  border: 0px;
+  border-radius: 10px;
+  outline: 0px;
+  padding-left: 10px;
+  text-align: center;
+  font-size: 20px;
+  z-index: 1;
 }
 
 #python{
@@ -39,6 +55,7 @@
   border-radius: 10px;
   outline: 0px;
   padding-left: 10px;
+  margin-top: 20px;
   text-align: center;
   font-size: 20px;
   z-index: 1;
