--- a/web/style.css
+++ b/web/style.css
@@ -25,7 +25,6 @@
   width: 100%;
   height: 100px;
   border-radius: 10px;
-  color: white;
   border: 0px;
   border-radius: 10px;
   outline: 0px;
@@ -33,6 +32,12 @@
   text-align: center;
   font-size: 20px;
   z-index: 1;
+}
+
+h1 {
+  font-size: small;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
 }
 
 #python{
