--- a/web/style.css
+++ b/web/style.css
@@ -1,5 +1,29 @@
-*{
-  background-color: beige;
+#errorMessage {
+  color: red;
+  font-weight: bold;
+  user-select: none;
+}
+
+#silabasBar {
+  display: grid;
+  background-color: rgb(101, 95, 95);
+  border-radius: 12px;
+  padding: 0 4px 0 4px;
+  gap: 0.5rem;
+  align-items: center;
+  grid-template-columns: repeat(6, 1fr);
+  text-align: center;
+}
+
+#silabasBar > h1 {
+  background-color: white;
+  border-radius: 8px;
+  user-select: none;
+}
+
+.info {
+  user-select: none;
+  color: white;
 }
 
 .titulo{
@@ -16,28 +40,29 @@
   height: 70vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
 }
 
 .fondo{
   background-color: rgb(71, 70, 70);
   margin-top: 20px;
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   border-radius: 10px;
   border: 0px;
-  border-radius: 10px;
   outline: 0px;
   padding-left: 10px;
   text-align: center;
   font-size: 20px;
-  z-index: 1;
+  padding-top: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
-  font-size: small;
+  font-size: medium;
   font-family: Arial, Helvetica, sans-serif;
-  color: black;
 }
 
 #python{
