--- a/web/style.css
+++ b/web/style.css
@@ -4,6 +4,14 @@
   user-select: none;
 }
 
+#silabas {
+  padding: 2px 4px 2px 4px;
+  color: white;
+  background-color: rgb(101, 95, 95);
+  border-radius: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #silabasBar {
   display: grid;
   background-color: rgb(101, 95, 95);
@@ -55,6 +63,7 @@
   text-align: center;
   font-size: 20px;
   padding-top: 8px;
+  padding-bottom: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
