--- a/web/style.css
+++ b/web/style.css
@@ -1,3 +1,38 @@
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgb(101, 95, 95);
+  padding: 6px 0 6px 10px;
+}
+
+.license {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 1rem;
+}
+
+.license > div {
+  color: black;
+  font-weight: initial;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.inputButton {
+  border-radius: 0 10px 10px 0;
+  background-color: wheat;
+  border-width: 0;
+  height: 100%;
+}
+
+.inputDiv {
+  display: flex;
+  align-items: center;
+  height: 30px;
+}
+
 #errorMessage {
   color: red;
   font-weight: bold;
@@ -49,6 +84,7 @@
   display: flex;
   justify-content: center;
   align-items: start;
+  overflow: hidden;
 }
 
 .fondo{
@@ -87,15 +123,14 @@ h1 {
 }
 
 .input{
-  height: 30px;
+  height: 100%;
   width: 100%;
   background-color: rgb(101, 95, 95);
   color: white;
   border: 0px;
-  border-radius: 10px;
+  border-radius: 10px 0 0 10px;
   outline: 0px;
   padding-left: 10px;
-  margin-top: 20px;
   text-align: center;
   font-size: 20px;
   z-index: 1;
