--- a/web/style.css
+++ b/web/style.css
@@ -1,25 +1,3 @@
-.footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgb(101, 95, 95);
-  padding: 6px 0 6px 10px;
-}
-
-.license {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  gap: 1rem;
-}
-
-.license > div {
-  color: black;
-  font-weight: initial;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .inputButton {
   border-radius: 0 10px 10px 0;
   background-color: wheat;
@@ -34,9 +12,14 @@
 }
 
 #errorMessage {
-  color: red;
+  color: white;
+  background-color: red;
+  padding: 3px;
+  border-radius: 10px;
   font-weight: bold;
   user-select: none;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 25px;
 }
 
 #silabas {
@@ -123,12 +106,12 @@ h1 {
 }
 
 .input{
-  height: 100%;
+  height: 30px;
   width: 100%;
   background-color: rgb(101, 95, 95);
   color: white;
   border: 0px;
-  border-radius: 10px 0 0 10px;
+  border-radius: 10px;
   outline: 0px;
   padding-left: 10px;
   text-align: center;
@@ -175,4 +158,40 @@ h1 {
   .titulo{
     font-size: 20px;
   }  
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgb(71, 70, 70);
+  padding: 6px 0 6px 10px;
+}
+
+.license {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 1rem;
+}
+
+.license>div {
+  color: white;
+  font-weight: lighter;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.footer>a {
+  color: gainsboro;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.license>div>a {
+  color: gainsboro;
+}
+
+.footer-title {
+  color: gainsboro;
 }
