--- a/web/style.css
+++ b/web/style.css
@@ -31,13 +31,13 @@
 }
 
 #silabasBar {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   background-color: rgb(101, 95, 95);
   border-radius: 12px;
   padding: 0 4px 0 4px;
   gap: 0.5rem;
   align-items: center;
-  grid-template-columns: repeat(6, 1fr);
   text-align: center;
 }
 
@@ -84,7 +84,7 @@
   padding-top: 8px;
   padding-bottom: 8px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   box-shadow: 0 0 10px 1px black;
 }
