--- a/web/style.css
+++ b/web/style.css
@@ -15,6 +15,7 @@
   color: white;
   background-color: red;
   padding: 3px;
+  position: fixed;
   border-radius: 10px;
   font-weight: bold;
   user-select: none;
@@ -31,12 +32,13 @@
 }
 
 #silabasBar {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   background-color: rgb(101, 95, 95);
   border-radius: 12px;
   padding: 0 4px 0 4px;
   gap: 0.5rem;
+  width: 50%;
   align-items: center;
   text-align: center;
 }
@@ -64,10 +66,14 @@
 :root {
   width: 100vw;
   height: 70vh;
+  background-image: url("./assets/wave-haikei.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
   display: flex;
   justify-content: center;
   align-items: start;
   overflow: hidden;
+  padding-top: 3rem;
 }
 
 .fondo{
