--- a/web/style.css
+++ b/web/style.css
@@ -27,6 +27,18 @@
   font-size: 25px;
 }
 
+#insertMessage {
+    color: white;
+    background-color: green;
+    padding: 3px;
+    position: fixed;
+    border-radius: 10px;
+    font-weight: bold;
+    user-select: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+}
+
 #silabas {
   padding: 2px 4px 2px 4px;
   color: white;
